# multiv_mapgen

./: .gitignore  Cargo.toml  PROCESS.sh  db.json  go.sh  qrtemplate.kra  qrtemplate.kra~
src/: main.rs  parsemap.rs
