[package]
name = "shvft_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
image = "0.24"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
#modvlo = {git="ssh://git@github.com/corp-shvft/modvlo.git",branch="main"}
modvlo = {path = "../modvlo"}